types of gc